# TDOA-Hydrophones

./: .gitignore  README.md  tdoa.cpp
MATLAB_code/: adaptive_ping_detector.m  dual_channel_TDOA.m  fastsmooth.m  peakfinder.m
tdoa_code/: CMakeLists.txt  a.out
tdoa_code/adc_interface/: checking.cpp  dual_test_2.cpp
tdoa_code/include/: Util.h  hydrophones.h  tdoa.h
tdoa_code/plots/: correlation.txt  graph.py  h1fall.txt  h1filt.txt  h1peaks.txt  h1working.txt  h2filt.txt  h2seg.txt  h2working.txt
tdoa_code/script/: graph.py
tdoa_code/src/: TO_DO  Util.cpp  debug.cpp  hydrophones.cpp  main.cpp  qcustomplot.cpp  rtdoa.cpp  server.cpp  tdoa.cpp
tdoa_code/ui/: hydrophones.pro  hydrophones.ui
